Atualizando controller appointments